--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,28 +2,18 @@
 
 <main>
   <ul id="users">
-    <li>
-      <app-user [avatar]="users[0].avatar" [name]="users[0].name" [id]="users[0].id"
-                (selectEvent)="onSelectUser($event)"
-      />
-    </li>
-    <li>
-      <app-user [avatar]="users[1].avatar" [name]="users[1].name" [id]="users[1].id"
-                (selectEvent)="onSelectUser($event)"
-      />
-    </li>
-    <li>
-      <app-user [avatar]="users[2].avatar" [name]="users[2].name" [id]="users[2].id"
-                (selectEvent)="onSelectUser($event)"
-      />
 
-    </li>
-    <li>
-      <app-user [avatar]="users[3].avatar" [name]="users[3].name" [id]="users[3].id"
-                (selectEvent)="onSelectUser($event)"
-      />
-    </li>
+    @for (user of users; track user.id) {
+      <li>
+        <app-user [user]="user"
+                  (selectEvent)="onSelectUser($event)"
+        />
+        }
   </ul>
 
-  <app-task [name]="selectedUser.name"/>
+  @if (selectedUser) {
+    <app-task [name]="selectedUser.name"/>
+  } @else {
+    <p id="fallback">Select a user to see their tasks!</p>
+  }
 </main>
