master: Continued to work on the angular course. Also updated the styling and other guides to adhere to a more strict ruleset.

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,8 +1,6 @@
 <div>
   <button (click)="onSelectUser()">
-    <img [src]="imagePath"
-         [alt]="user.name"
-    />
+    <img [alt]="user.name" [src]="imagePath" />
     <span>{{ user.name }}</span>
   </button>
 </div>
