--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,17 @@
-<app-header/>
+<app-header></app-header>
 
 <main>
   <ul id="users">
-
     @for (user of users; track user.id) {
-      <li>
-        <app-user [user]="user"
-                  (selectEvent)="onSelectUser($event)"
-        />
-        }
+        <li>
+          <app-user [user]="user" (selectEvent)="onSelectUser($event)" />
+        </li>
+      }
   </ul>
 
   @if (selectedUser) {
-    <app-task [name]="selectedUser.name"/>
+  <app-tasks [name]="selectedUser.name" [userId]="selectedUser.id" />
   } @else {
-    <p id="fallback">Select a user to see their tasks!</p>
+  <p id="fallback">Select a user to see their tasks!</p>
   }
 </main>
