--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,17 @@
 <app-header></app-header>
 
 <main>
-  <ul id="users">
-    @for (user of users; track user.id) {
-        <li>
-          <app-user [user]="user" (selectEvent)="onSelectUser($event)" />
-        </li>
-      }
-  </ul>
+    <ul id="users">
+        @for (user of users; track user.id) {
+            <li>
+                <app-user [user]="user" (selectEvent)="onSelectUser($event)" [selected]="user.id === selectedUserId" />
+            </li>
+        }
+    </ul>
 
-  @if (selectedUser) {
-  <app-tasks [name]="selectedUser.name" [userId]="selectedUser.id" />
-  } @else {
-  <p id="fallback">Select a user to see their tasks!</p>
-  }
+    @if (selectedUser) {
+        <app-tasks [name]="selectedUser.name" [userId]="selectedUser.id" />
+    } @else {
+        <p id="fallback">Select a user to see their tasks!</p>
+    }
 </main>
