--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,16 +1,20 @@
-<section id="tasks">
-  <header>
-    <h2>{{ name }}'s Tasks</h2>
-    <menu>
-      <button>Add Tasks</button>
-    </menu>
-  </header>
+@if (isAddingTask) {
+    <app-new-task (close)="onCloseAddTask()" [userId]="userId"></app-new-task>
+}
 
-  <ul>
-    @for (task of selectedUserTasks; track task.id) {
-    <li>
-      <app-task [task]="task"></app-task>
-    </li>
-    }
-  </ul>
+<section id="tasks">
+    <header>
+        <h2>{{ name }}'s Tasks</h2>
+        <menu>
+            <button (click)="onStartAddTask()">Add Tasks</button>
+        </menu>
+    </header>
+
+    <ul>
+        @for (task of selectedUserTasks; track task.id) {
+            <li>
+                <app-task [task]="task"></app-task>
+            </li>
+        }
+    </ul>
 </section>
