--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,6 +1,6 @@
-<div>
-  <button (click)="onSelectUser()">
-    <img [alt]="user.name" [src]="imagePath" />
-    <span>{{ user.name }}</span>
-  </button>
-</div>
+<app-card>
+    <button (click)="onSelectUser()" [class.active]="selected">
+        <img [alt]="user.name" [src]="imagePath" />
+        <span>{{ user.name }}</span>
+    </button>
+</app-card>
